Using "channel set #chan chanmode $var" corrupted $var in Tcl8.x.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.401 2002/08/31 00:39:04 wcc Exp $
+$Id: UPDATES1.6,v 1.402 2002/09/01 05:07:51 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+[sL]      Wcc       channel set #chan chanmode $var corrupted $var in Tcl8.x
           blaster^  don't log "joined #chan but didn't want to" in certian cases where
                     the channel was newly removed or set inactive
           Wcc       cosmetic changes to share_stick_[exempt/invite/ban]
