--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,4 +1,4 @@
-$Id: UPDATES1.6,v 1.402 2002/09/01 05:07:51 wcc Exp $
+$Id: UPDATES1.6,v 1.403 2002/09/01 05:17:39 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
@@ -6,7 +6,7 @@ Changes in Eggdrop: (since v1.6.0)
 1.6.13
 Found by  Fixed by  What...
 [sL]      Wcc       channel set #chan chanmode $var corrupted $var in Tcl8.x
-          blaster^  don't log "joined #chan but didn't want to" in certian cases where
+          blaster^  don't log "joined #chan but didn't want to" in certain cases where
                     the channel was newly removed or set inactive
           Wcc       cosmetic changes to share_stick_[exempt/invite/ban]
           TaKeDa    msg_key and msg_invite did not work properly for !channels
