--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.405 2002/09/10 02:22:00 wcc Exp $
+$Id: UPDATES1.6,v 1.406 2002/09/11 02:07:26 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+ridens    Wcc       improved access checking in -host/+host
 Jerome    Wcc       fixed a possible buffer overflow in raw_dcc_resend_send()
           darko``   fixed a missing escape in some regexps in misc/modconfig
 [sL]      Wcc       channel set #chan chanmode $var corrupted $var in Tcl8.x
