--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.407 2002/09/15 19:26:35 wcc Exp $
+$Id: UPDATES1.6,v 1.408 2002/09/21 20:40:56 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          BarkerJr  don't "want ops" in modeless (+) channels
 guppy     Wcc       tell the user to set 'my-ip' when hostname self-lookup fails
 ridens    Wcc       improved access checking in -host/+host
 Jerome    Wcc       fixed a possible buffer overflow in raw_dcc_resend_send()
