Fixed a problem with 'connect' and 'control' where the script would abort prematurely. Patch by [sL].

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.408 2002/09/21 20:40:56 wcc Exp $
+$Id: UPDATES1.6,v 1.409 2002/09/21 20:55:24 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+various   [sL]      fixed a problem with 'connect' and 'control' where the script
+                    would abort prematurely
           BarkerJr  don't "want ops" in modeless (+) channels
 guppy     Wcc       tell the user to set 'my-ip' when hostname self-lookup fails
 ridens    Wcc       improved access checking in -host/+host
