--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.410 2002/09/21 21:06:23 wcc Exp $
+$Id: UPDATES1.6,v 1.411 2002/09/21 21:32:05 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          BarkerJr  made the timestamp style definable in src/eggdrop.h
           Eule      added a missing return in bot_actchan()
 various   [sL]      fixed a problem with 'connect' and 'control' where the script
                     would abort prematurely
