--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.412 2002/09/22 08:12:30 wcc Exp $
+$Id: UPDATES1.6,v 1.413 2002/09/22 18:10:21 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          Eule      adding a missing killsock and lostdcc in eof_dcc_send() and
+                    eof_dcc_get()
           Wcc       fixed the logic in check_this_member()
           BarkerJr  made the timestamp style definable in src/eggdrop.h
           Eule      added a missing return in bot_actchan()
