Removed both eggdrop.simple.conf and eggdrop.advanced.conf, as many people cannot find the proper settings in eggdrop.simple.conf and therefore mis-configure their bots. The advanced config was removed due to the fact that the differences between eggdrop.advanced.conf and eggdrop.complete.conf wrere minimal.

--- a/README
+++ b/README
@@ -216,10 +216,10 @@ Last revised: June 5, 2002
     to delete the old Eggdrop executable and modules as well, especially if
     you have limited disk space.
 
-    You should read through the new eggdrop.complete.conf file for all the new
-    options in Eggdrop 1.6.x if you are upgrading from 1.3.x or 1.4.x. You can
-    copy and paste any of these settings into you current conf file if you do
-    not want to use the default settings.
+    You should read through the new eggdrop.conf file for all of the new
+    options in Eggdrop 1.6.x if you are upgrading from 1.3.x or 1.4.x. You
+    can copy and paste any of these settings into you current conf file if
+    you do not want to use the default settings.
 
 
   (5) COMMAND LINE
