--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.413 2002/09/22 18:10:21 wcc Exp $
+$Id: UPDATES1.6,v 1.414 2002/09/27 22:16:24 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+various   Wcc       removed eggdrop.advanced.conf and eggdrop.simple.conf
           Eule      adding a missing killsock and lostdcc in eof_dcc_send() and
                     eof_dcc_get()
           Wcc       fixed the logic in check_this_member()
