--- a/doc/man1/eggdrop.1
+++ b/doc/man1/eggdrop.1
@@ -92,18 +92,7 @@ Specifies the directory where all your language files are stored.
 The default is ./language
 .SH FILES
 .TP
-.I eggdrop.simple.conf
-sample configuration file, containing only the
-.B basic options
-needed by an average user.
-.TP
-.I eggdrop.advanced.conf
-sample configuration file, containing more
-.B advanced options
-useful to users who have very specific needs and who have reached a
-certain level of experience with eggdrop.
-.TP
-.I eggdrop.complete.conf
+.I eggdrop.conf
 sample configuration file, containing
 .B all available options
 in eggdrop.
