Optimized logging functions. Patch by BarkerJr.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.414 2002/09/27 22:16:24 wcc Exp $
+$Id: UPDATES1.6,v 1.415 2002/09/27 22:44:02 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          BarkerJr  optimized logging functions
 various   Wcc       removed eggdrop.advanced.conf and eggdrop.simple.conf
           Eule      adding a missing killsock and lostdcc in eof_dcc_send() and
                     eof_dcc_get()
