--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.415 2002/09/27 22:44:02 wcc Exp $
+$Id: UPDATES1.6,v 1.416 2002/09/27 22:55:20 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          Mo-Ize    exported tell_bottree() to modues
           BarkerJr  optimized logging functions
 various   Wcc       removed eggdrop.advanced.conf and eggdrop.simple.conf
           Eule      adding a missing killsock and lostdcc in eof_dcc_send() and
