Fixed cosmetic problems with logging in some irc module commands. Patch by NeoN.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.416 2002/09/27 22:55:20 wcc Exp $
+$Id: UPDATES1.6,v 1.417 2002/09/28 00:06:29 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          NeoN      fixed cosmetic problems with logging in some irc module commands
           Mo-Ize    exported tell_bottree() to modues
           BarkerJr  optimized logging functions
 various   Wcc       removed eggdrop.advanced.conf and eggdrop.simple.conf
