[ban/exempt/invite]-time were not being saved to the channel file. Patch by BarkerJr.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.418 2002/10/08 01:21:30 wcc Exp $
+$Id: UPDATES1.6,v 1.419 2002/10/08 02:04:02 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          BarkerJr  [ban/exempt/invite]-time were not being saved to the channel file
 Eule      Wcc       halfops were not honored in flush_modes()
           NeoN      fixed cosmetic problems with logging in some irc module commands
           Mo-Ize    exported tell_bottree() to modues
